--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -6,7 +6,7 @@
   /* Colors */
   --color-background: #fff5f2;
 
-  --color-text-light: #dcdcdc;
+  --color-text-light: #40404066;
   --color-text: #404040;
 
   --color-card-stroke: #e5dddb;
